--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "next build",
+    "dev": "next dev"
   },
   "eslintConfig": {
     "extends": [
@@ -23,10 +24,14 @@
     "html-webpack-plugin": "^5.5.3",
     "node-sass": "^9.0.0",
     "prettier": "^3.0.3",
+    "framer-motion": "^10.16.4",
+    "next": "13.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-loader": "^4.13.1",
     "react-scripts": "5.0.1",
+    "react-hook-form": "^7.46.2",
+    "react-icons": "^4.11.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "terser-webpack-plugin": "^5.3.9",
@@ -51,6 +56,11 @@
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.22.20",
     "@babel/preset-react": "^7.22.15",
-    "babel-loader": "^9.1.3"
+    "babel-loader": "^9.1.3",
+    "autoprefixer": "^10.4.16",
+    "eslint": "8.50.0",
+    "eslint-config-next": "13.5.3",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3"
   }
 }
