--- a/package.json
+++ b/package.json
@@ -21,20 +21,25 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "file-loader": "^6.2.0",
+    "framer-motion": "^10.16.4",
     "html-webpack-plugin": "^5.5.3",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
+    "next": "13.5.3",
     "node-sass": "^9.0.0",
     "prettier": "^3.0.3",
-    "framer-motion": "^10.16.4",
-    "next": "13.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-loader": "^4.13.1",
-    "react-scripts": "5.0.1",
     "react-hook-form": "^7.46.2",
+    "react-hot-loader": "^4.13.1",
     "react-icons": "^4.11.0",
+    "react-scripts": "5.0.1",
+    "recordrtc": "^5.6.2",
     "sass-loader": "^13.3.2",
+    "sort-by": "^1.2.0",
     "style-loader": "^3.3.3",
     "terser-webpack-plugin": "^5.3.9",
+    "use-screen-recorder": "^1.0.2",
     "web-vitals": "^2.1.4",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
@@ -56,8 +61,8 @@
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.22.20",
     "@babel/preset-react": "^7.22.15",
-    "babel-loader": "^9.1.3",
     "autoprefixer": "^10.4.16",
+    "babel-loader": "^9.1.3",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.3",
     "postcss": "^8.4.31",
