--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -35,10 +35,7 @@
       "resources": [
         "index.html",
         "assets/images/logo-2.png",
-        "assets/images/logo.png",
-        "assets/fonts/Poppins-Bold.ttf",
-        "assets/fonts/Poppins-Regular.ttf",
-        "assets/fonts/Poppins-SemiBold.ttf"
+        "assets/images/logo.png"
       ],
       "matches": ["<all_urls>"]
     }
