--- a/website/package.json
+++ b/website/package.json
@@ -28,12 +28,12 @@
     "next": "13.5.3",
     "node-sass": "^9.0.0",
     "prettier": "^3.0.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
     "react-hot-loader": "^4.13.1",
     "react-icons": "^4.11.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "recordrtc": "^5.6.2",
     "sass-loader": "^13.3.2",
     "sort-by": "^1.2.0",
