--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     },
     "keywords": [],
     "author": "",
-    "license": "ISC"
+    "license": "ISC",
+    "dependencies": {
+        "use-screen-recorder": "^1.0.2"
+    }
 }
